Massive overhaul, still working on the design, should've been more prepared in that regard.
Oh well, back to the grind.